--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "prepare": "./scripts/prepare.sh",
     "build": "./scripts/build.sh",
-    "start": "node ./dist/server.js"
+    "start": "node ./dist/server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
     "@types/ws": "^8.5.4",
     "esbuild": "^0.17.11",
     "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "gh-pages": "^5.0.0"
   }
 }
