--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://arooj-12.github.io/birthday-cake",
   "name": "birthday-cake",
   "private": true,
   "version": "0.1.0",
@@ -33,8 +34,8 @@
     "@types/knuth-shuffle-seeded": "^1.0.0",
     "@types/ws": "^8.5.4",
     "esbuild": "^0.17.11",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.4",
-    "typescript": "^4.9.5",
-    "gh-pages": "^5.0.0"
+    "typescript": "^4.9.5"
   }
 }
